# inference-gateway

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  EXAMPLES.md  LIBRARY_USAGE.md  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SOURCES.md  TICKETS.md  TROUBLESHOOTING.md  USAGE.md  USAGE_GUIDE.md  pyproject.toml
app/: __init__.py  audio.py  config.py  forwarder.py  logging.py  main.py  routing.py  schemas.py  security.py
deploy/systemd/: inference-gateway.service
examples/: analyze_example.py  chat_example.py  transcribe_example.py
inference_gateway/: ARCHITECTURE.md  README.md  __init__.py
inference_gateway/core/: audio.py  client.py  config.py  exceptions.py  logging.py  operations.py  routing.py
scripts/: README.md  dev_run.sh  healthcheck.sh  lint.sh  start_llama_server.sh  start_server.ps1  start_server.sh
tests/: __init__.py  integration_test_analyze_wav.py  integration_test_transcribe_wav.py  integration_test_wav_complete.py  test_analyze.py  test_audio.py  test_config.py  test_forwarder.py  test_health.py  test_library_operations.py  test_routing.py  test_security.py  test_transcribe.py  test_transcribe_contract.py
